# opentelemetry-python-examples

./: README.md  pyproject.toml
examples/: logs.py  trace.py
